--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@
 /* Main */
 .prologue {
   color: black;
-  background-image: linear-gradient(to bottom, #91a3b0  0%, #ADD8E6 100%);
+  background-image: linear-gradient(to bottom, #b0c6d2 0%, #d2e9f3 100%);
   max-width: 88%;
   border: 1px solid #c2b2bc ;
   box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.4);
@@ -16,14 +16,8 @@
   text-align: center;
 }
 
-.main-img {
-  border-radius: 50%;
-  /* max-width: 80%; */
-}
-.mg-main {
-  margin-bottom: 50px;
-}
 .main-p {
+margin-bottom: 30px;
 font-size: 19px;
 }
 .target-m {
@@ -66,16 +60,98 @@ tr:hover {
 }
 
 /* History Patients */
-.card-container {
-  padding-top: 20px;
+
+.history-section {
+    padding: 2%;
+    max-width: 870px;
+    border-top-left-radius: 30px;
+    border-top-right-radius: 30px;
+    
 }
+
+.history-item {
+  text-align: center;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: #f8f9fa;
+  margin-bottom: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+.btn-link{
+  color: #fff;
+  font-size: 23px;
+}
+
+.btn-link:hover {
+  color: #fff;
+}
+.history-header {
+  padding: 8px;
+  background-color: #007bff;
+  font-size: 18px;
+  font-weight: bold;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+.history-details {
+  padding: 20px;
+  font-size: 16px;
+  border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+.extra-content {
+  max-width: 600px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+}
+
+.extra-details {
+  width: 100%; /* Set the width to 100% to take up available space */
+  max-width: 600px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Update to align items in the center */
+}
+
+.survey-detail {
+  display: flex;
+  align-items: flex-start; /* Change align-items to flex-start */
+  margin-bottom: 10px;
+  width: 100%; /* Add width: 100% */
+}
+
+.survey-detail strong {
+  min-width: 180px;
+  font-weight: bold;
+  flex-shrink: 0; /* Add flex-shrink: 0 to prevent shrinking */
+}
+
+.survey-detail p {
+  margin: 0;
+}
+
+/* strong {
+  display: inline-block;
+  width: 150px;
+} */
 
 .card {
   text-align: left;
   border: 1px solid #c2b2bc;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   background-color: #fff;
-  max-width: 880px;
+  max-width: 600px;
+  width: 100%;
   margin: 0 auto 20px auto;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
@@ -98,65 +174,6 @@ tr:hover {
   border-bottom-left-radius: 30px;
   border-bottom-right-radius: 30px;
 } 
-
-/* .panel-heading {
-  padding: 0;
-}
-.panel-title {
-  text-align: center;
-  font-size: 23px;
-  background-color: #007bff;
-  color: #fff;
-  padding: 12px;
-  
-}
-.card-body {
-  font-size: 18px;
-  padding: 25px 50px ;
-  border-bottom-left-radius: 30px;
-  border-bottom-right-radius: 30px;
-} 
-.survey-label {
-  display: inline-block;
-  width: 120px; 
-  font-weight: bold;
-}
-
-.survey-value {
-  display: inline-block;
-  margin-left: 10px; 
-} */
-strong {
-  display: inline-block;
-  width: 150px;
-  
-}
-/* .panel-group {
-  margin-bottom: 20px;
-}
-
-.panel-default > .panel-heading {
-  background-color: #f5f5f5;
-  border-color: #ddd;
-  padding: 10px 15px;
-}
-
-.panel-title {
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.panel-body {
-  padding: 15px;
-}
-.panel-default {
-  max-width: 800px;
-  margin: 0 auto;
-}
-.strong {
-  text-align: left;
-} */
-
 
 /* Add a patient */
 #patient {
@@ -189,15 +206,15 @@ strong {
     text-align: center;
     padding: 0 17%;
 }
-  
+
 .sur-res {
     border-radius: 5px;
     box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.6);
     margin: 6% auto 0 auto;
     color: white;
     background-color: #008080;
-    max-width: 450px;
-    height: 150px;
+    max-width: 500px;
+    height: 180px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -212,6 +229,11 @@ strong {
     background-color: #20b2aa;
     color: white;
 }
+
+.score-p {
+font-size: 19px;
+}
+
 .sur-p {
   color: black;
   font-size: 17px;
@@ -262,11 +284,15 @@ strong {
 .settings {
     padding: 2%;
 }
+
+.info {
+  text-align: center;
+}
 .set-span {
     text-decoration: underline;
 }
 .stg-btn {
-    margin-top: 50px;
+    margin-top: 30px;
     text-align: right;
 }
 
